06 Kubernetes absichern/06 Firewallregeln im Cluster/app1-networkpolicy-cluster.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cluster
  namespace: app1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: app2
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          app: app2
    ports:
    - protocol: TCP
      port: 80
