06 Kubernetes absichern/06 Firewallregeln im Cluster/app1-networkpolicy-public.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: public
  namespace: app1
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - {}
