06 Kubernetes absichern/06 Firewallregeln im Cluster/app2-networkpolicy-cluster.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cluster
  namespace: app2
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: app1
  egress:
  - to:
    - namespaceSelector: {}
